# novel-crawler

./: .gitignore  Cargo.toml
scripts/: generate_game_database.py  verify_mentions.py
src/: cli.rs  main.rs  models.rs  sources.rs
src/crawler/: brightnovels.rs  mod.rs  novelbin.rs  novelfull.rs  novelishuniverse.rs  royalroad.rs  scribblehub.rs  webnovel.rs
src/output/: epub.rs  json.rs  mod.rs  txt.rs
